# chatgpt-todo-app

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test-curl.sh
docs/: C4-diagrams.md  PRD.md  TDD.md  test-spec.md
docs/prompts/: 01-idea-to-prd.md  01a-prd-refine-structure.md  01b-prd-simplify-nfrs.md  02-prd-to-tdd.md  02a-tdd-add-explanations.md  03-tdd-to-c4.md  05-to-test-spec.md  06-to-claude-md.md
src/: config.py  server.py
src/database/: __init__.py  connection.py  models.py
src/tools/: schemas.py  task_tools.py
src/ui/: __init__.py  components.py
tests/: conftest.py
tests/integration/: test_server.py  test_task_tools.py
tests/unit/: test_components.py  test_config.py  test_database.py  test_schemas.py
